# sge2

./: .gitignore  CMakeLists.txt  Makefile  engine.cpp  engine.hpp  entity.hpp  entity.lua  graphics.cpp  graphics.hpp  inputevents.cpp  inputevents.hpp  main.cpp  main.lua  rectdrawable.lua  scriptengine.cpp  scriptengine.hpp
sgelib/: actor.lua  mousefollowingmover.lua  perpetualmover.lua  rectdrawable.lua
src/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  graphics.cpp  graphics.hpp  graphicsadapter.hpp  inputadapter.hpp  inputevents.cpp  inputevents.hpp  main.cpp  scriptengine.cpp  scriptengine.hpp  sfml.cpp  sfml.hpp
